// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsMembersPage should match snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.h1
        classname="el-text-base"
      >
        Members
      </mock-styled.h1>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div />
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="el-mb11"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="5"
        role="table"
      >
        <mock-styled.div
          role="row"
        >
          <mock-styled.div
            aria-label="Name"
            role="columnheader"
          >
            Name
          </mock-styled.div>
          <mock-styled.div
            aria-label="Status"
            role="columnheader"
          >
            Status
          </mock-styled.div>
          <mock-styled.div
            aria-label="Email"
            role="columnheader"
          >
            Email
          </mock-styled.div>
          <mock-styled.div
            aria-label="Role"
            role="columnheader"
          >
            Role
          </mock-styled.div>
          <mock-styled.div
            aria-label="Main Contact"
            role="columnheader"
          >
            Main Contact
          </mock-styled.div>
          <mock-styled.div
            role="columnheader"
          >
            <mock-styled.span
              classname="el-intent-default el-icon-new"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
          role="row"
        >
          <mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.span
                classname="el-intent-default"
                role="img"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  style="font-size: 1.25rem;"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.929 12.929a10 10 0 0 1 3.8-2.384 5.78 5.78 0 0 1-2.51-4.764A5.79 5.79 0 0 1 10 0a5.79 5.79 0 0 1 5.781 5.781c0 1.975-.995 3.721-2.51 4.764a10 10 0 0 1 3.8 2.384A9.94 9.94 0 0 1 20 20h-1.562c0-4.652-3.785-8.437-8.438-8.437-4.652 0-8.437 3.784-8.437 8.437H0a9.94 9.94 0 0 1 2.929-7.071M10 10a4.224 4.224 0 0 0 4.219-4.219A4.224 4.224 0 0 0 10 1.563 4.224 4.224 0 0 0 5.781 5.78 4.224 4.224 0 0 0 10 10"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="Name"
              >
                Joe Dev
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.div
                data-narrow-label="Status"
              >
                <mock-styled.span
                  classname="el-intent-success"
                />
                 
                Active
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.span
                classname="el-intent-default"
                role="img"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  style="font-size: 1.25rem;"
                  viewBox="0 0 20 16"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.125.5H1.875A1.877 1.877 0 0 0 0 2.375v11.25C0 14.659.841 15.5 1.875 15.5h16.25A1.877 1.877 0 0 0 20 13.625V2.375A1.877 1.877 0 0 0 18.125.5m0 1.25a.6.6 0 0 1 .24.048L10 9.048l-8.365-7.25a.6.6 0 0 1 .24-.048zm0 12.5H1.875a.625.625 0 0 1-.625-.625V3.119l8.34 7.228a.624.624 0 0 0 .82 0l8.34-7.228v10.506c0 .345-.28.625-.625.625"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="Email"
              >
                example@email.com
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.div
                data-narrow-label="Role"
              >
                Admin
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.div
                data-narrow-label="Main Contact"
              >
                -
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
              role="cell"
            >
              <mock-styled.span
                classname="el-intent-default el-icon-new"
                role="img"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            aria-hidden="false"
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.div
                  classname="el-button-group-align-center"
                >
                  <mock-styled.button
                    classname="el-intent-primary"
                    disabled="false"
                  >
                    <mock-styled.div />
                    Set As 
                    User
                  </mock-styled.button>
                  <mock-styled.button
                    classname="el-intent-primary"
                    disabled="false"
                  >
                    <mock-styled.div />
                    Invite Again
                  </mock-styled.button>
                  <mock-styled.button
                    classname="el-intent-primary"
                  >
                    <mock-styled.div />
                    Set As Main Contact
                  </mock-styled.button>
                  <mock-styled.button
                    classname="el-intent-danger"
                    disabled="false"
                  >
                    <mock-styled.div />
                    Disable
                  </mock-styled.button>
                  <mock-styled.button
                    classname="el-intent-danger"
                    disabled="false"
                  >
                    <mock-styled.div />
                    Delete
                  </mock-styled.button>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.button
          aria-label="Previous"
          data-testid="back-button"
          role="button"
          type="button"
        >
          <mock-styled.span
            classname="el-icon-new"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.button>
        <mock-styled.div>
          <mock-styled.input
            value="1"
          />
           of 
          1
        </mock-styled.div>
        <mock-styled.button
          aria-label="Next"
          data-testid="forward-button"
          role="button"
          type="button"
        >
          <mock-styled.span
            classname="el-icon-new"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
      <mock-styled.div
        aria-hidden="true"
        classname=""
      />
      <mock-styled.div
        classname=""
        id=":r0:"
      >
        <mock-styled.button
          aria-controls=":r0:"
          classname="el-floating-button el-intent-primary"
        >
          <mock-styled.div />
          <mock-styled.span
            classname="el-icon-new"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.h1
      classname="el-text-base"
    >
      Members
    </mock-styled.h1>
    <mock-styled.div
      classname=""
    >
      <mock-styled.div>
        <mock-styled.div />
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname="el-mb11"
      data-has-call-to-action="false"
      data-has-expandable-action="true"
      data-num-columns-excl-action-col="5"
      role="table"
    >
      <mock-styled.div
        role="row"
      >
        <mock-styled.div
          aria-label="Name"
          role="columnheader"
        >
          Name
        </mock-styled.div>
        <mock-styled.div
          aria-label="Status"
          role="columnheader"
        >
          Status
        </mock-styled.div>
        <mock-styled.div
          aria-label="Email"
          role="columnheader"
        >
          Email
        </mock-styled.div>
        <mock-styled.div
          aria-label="Role"
          role="columnheader"
        >
          Role
        </mock-styled.div>
        <mock-styled.div
          aria-label="Main Contact"
          role="columnheader"
        >
          Main Contact
        </mock-styled.div>
        <mock-styled.div
          role="columnheader"
        >
          <mock-styled.span
            classname="el-intent-default el-icon-new"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
        role="row"
      >
        <mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
            role="cell"
          >
            <mock-styled.span
              classname="el-intent-default"
              role="img"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                style="font-size: 1.25rem;"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2.929 12.929a10 10 0 0 1 3.8-2.384 5.78 5.78 0 0 1-2.51-4.764A5.79 5.79 0 0 1 10 0a5.79 5.79 0 0 1 5.781 5.781c0 1.975-.995 3.721-2.51 4.764a10 10 0 0 1 3.8 2.384A9.94 9.94 0 0 1 20 20h-1.562c0-4.652-3.785-8.437-8.438-8.437-4.652 0-8.437 3.784-8.437 8.437H0a9.94 9.94 0 0 1 2.929-7.071M10 10a4.224 4.224 0 0 0 4.219-4.219A4.224 4.224 0 0 0 10 1.563 4.224 4.224 0 0 0 5.781 5.78 4.224 4.224 0 0 0 10 10"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
            <mock-styled.div
              data-narrow-label="Name"
            >
              Joe Dev
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
            role="cell"
          >
            <mock-styled.div
              data-narrow-label="Status"
            >
              <mock-styled.span
                classname="el-intent-success"
              />
               
              Active
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
            role="cell"
          >
            <mock-styled.span
              classname="el-intent-default"
              role="img"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                style="font-size: 1.25rem;"
                viewBox="0 0 20 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.125.5H1.875A1.877 1.877 0 0 0 0 2.375v11.25C0 14.659.841 15.5 1.875 15.5h16.25A1.877 1.877 0 0 0 20 13.625V2.375A1.877 1.877 0 0 0 18.125.5m0 1.25a.6.6 0 0 1 .24.048L10 9.048l-8.365-7.25a.6.6 0 0 1 .24-.048zm0 12.5H1.875a.625.625 0 0 1-.625-.625V3.119l8.34 7.228a.624.624 0 0 0 .82 0l8.34-7.228v10.506c0 .345-.28.625-.625.625"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
            <mock-styled.div
              data-narrow-label="Email"
            >
              example@email.com
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
            role="cell"
          >
            <mock-styled.div
              data-narrow-label="Role"
            >
              Admin
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
            role="cell"
          >
            <mock-styled.div
              data-narrow-label="Main Contact"
            >
              -
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
            role="cell"
          >
            <mock-styled.span
              classname="el-intent-default el-icon-new"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          aria-hidden="false"
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.div
                classname="el-button-group-align-center"
              >
                <mock-styled.button
                  classname="el-intent-primary"
                  disabled="false"
                >
                  <mock-styled.div />
                  Set As 
                  User
                </mock-styled.button>
                <mock-styled.button
                  classname="el-intent-primary"
                  disabled="false"
                >
                  <mock-styled.div />
                  Invite Again
                </mock-styled.button>
                <mock-styled.button
                  classname="el-intent-primary"
                >
                  <mock-styled.div />
                  Set As Main Contact
                </mock-styled.button>
                <mock-styled.button
                  classname="el-intent-danger"
                  disabled="false"
                >
                  <mock-styled.div />
                  Disable
                </mock-styled.button>
                <mock-styled.button
                  classname="el-intent-danger"
                  disabled="false"
                >
                  <mock-styled.div />
                  Delete
                </mock-styled.button>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div>
      <mock-styled.button
        aria-label="Previous"
        data-testid="back-button"
        role="button"
        type="button"
      >
        <mock-styled.span
          classname="el-icon-new"
          role="img"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
              fill="currentColor"
            />
          </svg>
        </mock-styled.span>
      </mock-styled.button>
      <mock-styled.div>
        <mock-styled.input
          value="1"
        />
         of 
        1
      </mock-styled.div>
      <mock-styled.button
        aria-label="Next"
        data-testid="forward-button"
        role="button"
        type="button"
      >
        <mock-styled.span
          classname="el-icon-new"
          role="img"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
              fill="currentColor"
            />
          </svg>
        </mock-styled.span>
      </mock-styled.button>
    </mock-styled.div>
    <mock-styled.div
      aria-hidden="true"
      classname=""
    />
    <mock-styled.div
      classname=""
      id=":r0:"
    >
      <mock-styled.button
        aria-controls=":r0:"
        classname="el-floating-button el-intent-primary"
      >
        <mock-styled.div />
        <mock-styled.span
          classname="el-icon-new"
          role="img"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
              fill="currentColor"
            />
          </svg>
        </mock-styled.span>
      </mock-styled.button>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SettingsMembersPage should match snapshot for mobile view 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
    </div>
    <div>
      <mock-styled.div />
      <mock-styled.h1
        classname="el-text-base"
      >
        Members
      </mock-styled.h1>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div />
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="el-mb11"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="5"
        role="table"
      >
        <mock-styled.div
          role="row"
        >
          <mock-styled.div
            aria-label="Name"
            role="columnheader"
          >
            Name
          </mock-styled.div>
          <mock-styled.div
            aria-label="Status"
            role="columnheader"
          >
            Status
          </mock-styled.div>
          <mock-styled.div
            aria-label="Email"
            role="columnheader"
          >
            Email
          </mock-styled.div>
          <mock-styled.div
            aria-label="Role"
            role="columnheader"
          >
            Role
          </mock-styled.div>
          <mock-styled.div
            aria-label="Main Contact"
            role="columnheader"
          >
            Main Contact
          </mock-styled.div>
          <mock-styled.div
            role="columnheader"
          >
            <mock-styled.span
              classname="el-intent-default el-icon-new"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
          role="row"
        >
          <mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.span
                classname="el-intent-default"
                role="img"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  style="font-size: 1.25rem;"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.929 12.929a10 10 0 0 1 3.8-2.384 5.78 5.78 0 0 1-2.51-4.764A5.79 5.79 0 0 1 10 0a5.79 5.79 0 0 1 5.781 5.781c0 1.975-.995 3.721-2.51 4.764a10 10 0 0 1 3.8 2.384A9.94 9.94 0 0 1 20 20h-1.562c0-4.652-3.785-8.437-8.438-8.437-4.652 0-8.437 3.784-8.437 8.437H0a9.94 9.94 0 0 1 2.929-7.071M10 10a4.224 4.224 0 0 0 4.219-4.219A4.224 4.224 0 0 0 10 1.563 4.224 4.224 0 0 0 5.781 5.78 4.224 4.224 0 0 0 10 10"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="Name"
              >
                Joe Dev
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.div
                data-narrow-label="Status"
              >
                <mock-styled.span
                  classname="el-intent-success"
                />
                 
                Active
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.span
                classname="el-intent-default"
                role="img"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  style="font-size: 1.25rem;"
                  viewBox="0 0 20 16"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.125.5H1.875A1.877 1.877 0 0 0 0 2.375v11.25C0 14.659.841 15.5 1.875 15.5h16.25A1.877 1.877 0 0 0 20 13.625V2.375A1.877 1.877 0 0 0 18.125.5m0 1.25a.6.6 0 0 1 .24.048L10 9.048l-8.365-7.25a.6.6 0 0 1 .24-.048zm0 12.5H1.875a.625.625 0 0 1-.625-.625V3.119l8.34 7.228a.624.624 0 0 0 .82 0l8.34-7.228v10.506c0 .345-.28.625-.625.625"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="Email"
              >
                example@email.com
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.div
                data-narrow-label="Role"
              >
                Admin
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.div
                data-narrow-label="Main Contact"
              >
                -
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
              role="cell"
            >
              <mock-styled.span
                classname="el-intent-default el-icon-new"
                role="img"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            aria-hidden="false"
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.div
                  classname="el-button-group-align-center"
                >
                  <mock-styled.button
                    classname="el-intent-primary"
                    disabled="false"
                  >
                    <mock-styled.div />
                    Set As 
                    User
                  </mock-styled.button>
                  <mock-styled.button
                    classname="el-intent-primary"
                    disabled="false"
                  >
                    <mock-styled.div />
                    Invite Again
                  </mock-styled.button>
                  <mock-styled.button
                    classname="el-intent-primary"
                  >
                    <mock-styled.div />
                    Set As Main Contact
                  </mock-styled.button>
                  <mock-styled.button
                    classname="el-intent-danger"
                    disabled="false"
                  >
                    <mock-styled.div />
                    Disable
                  </mock-styled.button>
                  <mock-styled.button
                    classname="el-intent-danger"
                    disabled="false"
                  >
                    <mock-styled.div />
                    Delete
                  </mock-styled.button>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.button
          aria-label="Previous"
          data-testid="back-button"
          role="button"
          type="button"
        >
          <mock-styled.span
            classname="el-icon-new"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.button>
        <mock-styled.div>
          <mock-styled.input
            value="1"
          />
           of 
          1
        </mock-styled.div>
        <mock-styled.button
          aria-label="Next"
          data-testid="forward-button"
          role="button"
          type="button"
        >
          <mock-styled.span
            classname="el-icon-new"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
      <mock-styled.div
        aria-hidden="true"
        classname=""
      />
      <mock-styled.div
        classname=""
        id=":r2:"
      >
        <mock-styled.button
          aria-controls=":r2:"
          classname="el-floating-button el-intent-primary"
        >
          <mock-styled.div />
          <mock-styled.span
            classname="el-icon-new"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.h1
      classname="el-text-base"
    >
      Members
    </mock-styled.h1>
    <mock-styled.div
      classname=""
    >
      <mock-styled.div>
        <mock-styled.div />
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname="el-mb11"
      data-has-call-to-action="false"
      data-has-expandable-action="true"
      data-num-columns-excl-action-col="5"
      role="table"
    >
      <mock-styled.div
        role="row"
      >
        <mock-styled.div
          aria-label="Name"
          role="columnheader"
        >
          Name
        </mock-styled.div>
        <mock-styled.div
          aria-label="Status"
          role="columnheader"
        >
          Status
        </mock-styled.div>
        <mock-styled.div
          aria-label="Email"
          role="columnheader"
        >
          Email
        </mock-styled.div>
        <mock-styled.div
          aria-label="Role"
          role="columnheader"
        >
          Role
        </mock-styled.div>
        <mock-styled.div
          aria-label="Main Contact"
          role="columnheader"
        >
          Main Contact
        </mock-styled.div>
        <mock-styled.div
          role="columnheader"
        >
          <mock-styled.span
            classname="el-intent-default el-icon-new"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
        role="row"
      >
        <mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
            role="cell"
          >
            <mock-styled.span
              classname="el-intent-default"
              role="img"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                style="font-size: 1.25rem;"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2.929 12.929a10 10 0 0 1 3.8-2.384 5.78 5.78 0 0 1-2.51-4.764A5.79 5.79 0 0 1 10 0a5.79 5.79 0 0 1 5.781 5.781c0 1.975-.995 3.721-2.51 4.764a10 10 0 0 1 3.8 2.384A9.94 9.94 0 0 1 20 20h-1.562c0-4.652-3.785-8.437-8.438-8.437-4.652 0-8.437 3.784-8.437 8.437H0a9.94 9.94 0 0 1 2.929-7.071M10 10a4.224 4.224 0 0 0 4.219-4.219A4.224 4.224 0 0 0 10 1.563 4.224 4.224 0 0 0 5.781 5.78 4.224 4.224 0 0 0 10 10"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
            <mock-styled.div
              data-narrow-label="Name"
            >
              Joe Dev
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
            role="cell"
          >
            <mock-styled.div
              data-narrow-label="Status"
            >
              <mock-styled.span
                classname="el-intent-success"
              />
               
              Active
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
            role="cell"
          >
            <mock-styled.span
              classname="el-intent-default"
              role="img"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                style="font-size: 1.25rem;"
                viewBox="0 0 20 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.125.5H1.875A1.877 1.877 0 0 0 0 2.375v11.25C0 14.659.841 15.5 1.875 15.5h16.25A1.877 1.877 0 0 0 20 13.625V2.375A1.877 1.877 0 0 0 18.125.5m0 1.25a.6.6 0 0 1 .24.048L10 9.048l-8.365-7.25a.6.6 0 0 1 .24-.048zm0 12.5H1.875a.625.625 0 0 1-.625-.625V3.119l8.34 7.228a.624.624 0 0 0 .82 0l8.34-7.228v10.506c0 .345-.28.625-.625.625"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
            <mock-styled.div
              data-narrow-label="Email"
            >
              example@email.com
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
            role="cell"
          >
            <mock-styled.div
              data-narrow-label="Role"
            >
              Admin
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
            role="cell"
          >
            <mock-styled.div
              data-narrow-label="Main Contact"
            >
              -
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
            role="cell"
          >
            <mock-styled.span
              classname="el-intent-default el-icon-new"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          aria-hidden="false"
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.div
                classname="el-button-group-align-center"
              >
                <mock-styled.button
                  classname="el-intent-primary"
                  disabled="false"
                >
                  <mock-styled.div />
                  Set As 
                  User
                </mock-styled.button>
                <mock-styled.button
                  classname="el-intent-primary"
                  disabled="false"
                >
                  <mock-styled.div />
                  Invite Again
                </mock-styled.button>
                <mock-styled.button
                  classname="el-intent-primary"
                >
                  <mock-styled.div />
                  Set As Main Contact
                </mock-styled.button>
                <mock-styled.button
                  classname="el-intent-danger"
                  disabled="false"
                >
                  <mock-styled.div />
                  Disable
                </mock-styled.button>
                <mock-styled.button
                  classname="el-intent-danger"
                  disabled="false"
                >
                  <mock-styled.div />
                  Delete
                </mock-styled.button>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div>
      <mock-styled.button
        aria-label="Previous"
        data-testid="back-button"
        role="button"
        type="button"
      >
        <mock-styled.span
          classname="el-icon-new"
          role="img"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
              fill="currentColor"
            />
          </svg>
        </mock-styled.span>
      </mock-styled.button>
      <mock-styled.div>
        <mock-styled.input
          value="1"
        />
         of 
        1
      </mock-styled.div>
      <mock-styled.button
        aria-label="Next"
        data-testid="forward-button"
        role="button"
        type="button"
      >
        <mock-styled.span
          classname="el-icon-new"
          role="img"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
              fill="currentColor"
            />
          </svg>
        </mock-styled.span>
      </mock-styled.button>
    </mock-styled.div>
    <mock-styled.div
      aria-hidden="true"
      classname=""
    />
    <mock-styled.div
      classname=""
      id=":r2:"
    >
      <mock-styled.button
        aria-controls=":r2:"
        classname="el-floating-button el-intent-primary"
      >
        <mock-styled.div />
        <mock-styled.span
          classname="el-icon-new"
          role="img"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
              fill="currentColor"
            />
          </svg>
        </mock-styled.span>
      </mock-styled.button>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
